hackathon/assets/css/styles.css
/* ... */
.judges-avatar16 {
	background-image: url('../img/judges/.png');
	background-repeat: no-repeat;
	background-position: center center;
	background-color: #ffffff;
	background-size: 100px;
	width: 100px;
	height: 100px;
	-moz-border-radius: 50%;
	-webkit-border-radius: 50%;
	border-radius: 50%;
	margin: 0 auto;
}









/****************************/
/** Reset **/
/****************************/	

html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;

}


strong{
	font-weight:bold;
}

body {
	color: #7a7a7a;
	font-family: 'Raleway', sans-serif;
	font-size: 14px;
	font-style: normal;
	line-height:1.5;
	overflow:hidden;

}

a:hover,a:active {
	outline: 0;
}

button:focus{
	border:none;
	outline:0;
}

ul {
	list-style: none;
}

a {
	color: #fff;
	text-decoration: none;
}

a:hover {
	color: #fff;
	text-decoration: none;
}

a:focus {
	color: #fff;
	text-decoration: none;
	outline: none;
}

h1 {
	font-size: 2em;
	color: #FFFFFF;
}

h2 {
	font-size: 1.5em;
	margin: 0.83em 0;
}

h3 {
	font-size: 1.17em;
	margin: 1em 0;
}

h4 {
	font-size: 1em;
	margin: 1.33em 0;
}

h5 {
	font-size: 0.83em;
	margin: 1.67em 0;
}

h6 {
	font-size: 0.75em;
	margin: 2.33em 0;
}

p {
	color: #5f6061;
	font-size: 1.1em;
	line-height: 1.6em;
}

.bottom-spacing{
	margin-bottom:2.5%;
}

.form-control::-webkit-input-placeholder { /* WebKit browsers */
	color: #fff;

}
.form-control:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
	color: #fff;

}
.form-control::-moz-placeholder { /* Mozilla Firefox 19+ */
	color: #fff;

}
.form-control::-ms-input-placeholder { /* Internet Explorer 10+ */
	color: #fff;

}
.form-control*::-moz-placeholder {
	color: #fff;

}

/****************************/
/** Preloader **/
/****************************/

.preloader {
	//background: none repeat scroll 0 0 #101012;
	background: none repeat scroll 0 0 #000;
	position: fixed;
	z-index: 110;
	height: 100%;
	width: 100%;
	overflow:hidden!important;
}

/* .status {
background: url("../img/loading.gif") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
float: none;
height: 104px;
left: calc(50% - 100px);
margin: 0 auto;
opacity: 1;
overflow-y: hidden;
position: absolute;
text-align: center;
top: calc(50% - 52px);
width: 100%;
z-index: 111;
} */
/* ... */

